my-apps/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8989
    protocol: TCP
  selector:
    app: sonarr
